# news-monitor

./: .gitignore  Dockerfile  Dockerfile_1  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: push_to_huggingface.yml  test_build.yml
default_repo/: io_config.yaml  metadata.yaml  requirements.txt
default_repo/custom/: trigger_dbt_logic.py
default_repo/data_exporters/: push_to_duckdb.py
default_repo/data_loaders/: ingest_data.py
default_repo/pipelines/news_monitor/: metadata.yaml
default_repo/scratchpads/: scratchpad_01.py  scratchpad_03.py  scratchpad_04.py  scratchpad_05.py
default_repo/transformers/insert_and/: or_create_new_columns.py
frontend/: app.py
news_report/: .user.yml  dbt_project.yml  profiles.yml
news_report/macros/: assert_column_not_null.sql  drop_snapshot.sql  format_date.sql  get_new_files.sql  remove_duplicates.sql
news_report/models/ephemeral/: ephemeral_spain_news.sql  int_news_cleaned.sql
news_report/models/mart/: fct_club_mentions.sql  fct_daily_sentiment.sql  fct_sagrada_sentiment.sql
news_report/models/staging/: fct_daily_sentiment.sql  src_news.yml  stg_spain_news.sql
news_report/models/staging/incremental/: stg_news_incremental.sql
news_report/prod_artifacts/: manifest.json
news_report/seeds/: about.md  club_locations.csv
news_report/snapshots/: sagrada_sentiment_snapshot.sql  sagrada_sentiment_snapshot.yml  spain_news_snapshot.sql  spain_news_snapshot.yml
news_report/tests/: assert_no_duplicates.sql  schema.yml
virtual_env/: pyvenv.cfg
