# This describes the project and its dependencies.
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-monitor"
version = "0.1.0"
description = "A news monitoring application for Spanish news sentiment analysis."
authors = [
    { name = "Brenda QT", email = "pacheconlucky@gmail.com" }
]
readme = "README.md"
dependencies = [
    "streamlit>=1.0.0",
    "pandas>=1.3.0",
    "duckdb>=0.3.0",
    "sqlalchemy>=1.4.0",
    "huggingface_hub>=0.10.0",
    "glob2>=0.7",
    "feedparser>=6.0.8",
    "transformers>=4.0.0",
    "torch>=1.9.0",
    "pysentimento>=0.2.5"
]